Fixed layout bug on login

--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,6 +1,6 @@
 #Login {
   width: 100%;
-  min-height: 100%;
+  height: 100vh;
   background-color: #34495e;
   font-family: 'Open Sans', sans-serif;
 }
